[package]
name = "envdiff"
version = "0.1.0"
edition = "2024"
authors = ["nekef chk, nekef@duck.com"]
description = "A sleek CLI tool to compare and sync .env files with templates"
license = "MIT"
homepage = "https://github.com/nekef/envdiff"
repository = "https://github.com/nekef/envdiff"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
